# bbtc_rag_capstone

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  backfill_title_chunks.py  dagster_pipeline.py  ingest.py  pyproject.toml  render.yaml  requirements.txt  run.py
.claude/: settings.local.json
.dagster/: dagster.yaml
.dagster_home/.telemetry/: id.yaml
.dagster_home/history/: runs.db
.dagster_home/schedules/: schedules.db
app/: __init__.py  auth.py  engine.py  routes.py
deploy/backend/: requirements.txt
docs/: README.md
docs/archive/: README.md
docs/plans/: 2026-06-09-mandarin-sermons-ingestion.md
evals/: __init__.py  golden_set.json  run_eval.py
scratch/: check_bible_data.py  check_diffs.py  check_init.py  debug_extraction.py  discover_years.py  fix_date_speakers.py  ingest_asv.py  test_agent.py  test_tool.py  verify_merge.py
scripts/: README.md  migrate_db.py
src/: llm.py  ui_helpers.py
src/agents/: sermon_structure_agent.py
src/ingestion/: file_classifier.py  filename_parser.py  ps_extractor.py  sermon_grouper.py  title_chunk.py
src/scraper/: bbtc_scraper.py
src/storage/: chroma_store.py  normalize_book.py  normalize_speaker.py  reranker.py  sqlite_store.py
templates/: base.html  dashboard.html  login.html
tests/: test_bible_tool.py  test_file_classifier.py  test_filename_parser.py  test_llm.py  test_matplotlib_tool.py  test_normalize_book.py  test_ps_extractor.py  test_reranker.py  test_sermon_grouper.py  test_title_chunk.py  test_vector_tool.py
vectorstore/: chroma.sqlite3
(+46 files in other folders)
